@@ -9,6 +9,7 @@ BackEnd:
 - Moved some hardcoded variables to a config file
 - Moved ImageFileData DTO to a file
 - Refactored callback
+- Patched a bug in metadataGrabber and songCollector
 
 ====================================================
 0.6.0-beta
